s3 scan enhancement changes for #1970
Signed-off-by: Uday Kumar Chintala <udaych20@gmail.com>